force-app/main/default/objects/Square_Transaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Square Transactions</relationshipLabel>
    <relationshipName>Square_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>