force-app/main/default/objects/Square_Transaction__c/fields/sqCreateDate__c.field-meta.xml
<CustomField>
    <fullName>sqCreateDate__c</fullName>
    <label>Payment Create Date</label>
    <type>DateTime</type>
</CustomField>