force-app/main/default/objects/Square_Transaction__c/fields/sqReceiptNumber__c.field-meta.xml
<CustomField>
    <fullName>sqReceiptNumber__c</fullName>
    <label>Receipt Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>