force-app/main/default/objects/Square_Transaction__c/fields/sqReceiptURL__c.field-meta.xml
<CustomField>
    <fullName>sqReceiptURL__c</fullName>
    <label>Receipt URL</label>
    <length>254</length>
    <type>Text</type>
</CustomField>