force-app/main/default/objects/Square_Transaction__c/fields/sqReferenceId__c.field-meta.xml
<CustomField>
    <fullName>sqReferenceId__c</fullName>
    <description>A Salesforce Object Id reference in the Payment</description>
    <label>Reference Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>