force-app/main/default/objects/Square_Transaction__c/validationRules/Lock_Record_when_Transaction_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Record_when_Transaction_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE(isLocked__c) = TRUE</errorConditionFormula>
    <errorMessage>Cannot edit a completed transaction.</errorMessage>
</ValidationRule>